# poker_app

./: .gitignore  docker-compose.yml
backend/: Cargo.toml
backend/.sqlx/: query-ce286b1d996e8cfa96cdb87d681372bd839fab18cb848d334c648c2e98e276c9.json
backend/migrations/: 20250826114740_create_users_table.sql  20250917103400_create_rooms_table.sql
backend/src/: game.rs  hand_evaluator.rs  main.rs
docs/: README.md  use_case.md
frontend/: package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/createroom/: page.tsx
frontend/src/app/lobby/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/mypage/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/rooms/[roomId]/: page.tsx
frontend/src/components/: AuthInitializer.tsx  AuthStatus.tsx
frontend/src/store/: userStore.ts
