[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
dashmap = "5.5.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
jsonwebtoken = "9.3.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "time"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
